updated website with add to cart feature

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "react-slideshow-image": "^4.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
